--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Turístico</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
-</body>
+    <h1>Conheça Paris</h1>
+    <img src="assets/paris.png" alt="vista de Paris" > 
+    <p>Paris é um dos destinos mais icônicos do mundo, reconhecida por sua arquitetura histórica, cultura vibrante e charme único.<br> 
+        Do alto, a cidade revela sua organização elegante e monumentos que tornam cada visita inesquecível. </p>
+    <h2>Descubra 3 lugares imperdíveis em Paris</h2>
+    <p></p>
+    <h2>1. Museu Do Louvre</h2>
+    <img src="assets/museu.jpg" alt="museu do louvre">
+    <p>O Museu do Louvre é um dos museus mais famosos do mundo e fica no centro de Paris. Ele funciona em um antigo palácio e reúne obras de arte de diferentes épocas, como pinturas, esculturas e objetos históricos. O museu é conhecido tanto pelo seu grande acervo quanto pela sua arquitetura, que mistura o prédio clássico com a moderna pirâmide de vidro, tornando a visita interessante e agradável.</p>
+    <h2>2. Torre Eiffel</h2>
+    <img src="assets/eiffel.jpg" alt="torre eiffel">
+    <p>A Torre Eiffel é o principal símbolo de Paris e um dos monumentos mais conhecidos do mundo. Construída em 1889, a torre oferece uma vista incrível da cidade e atrai milhões de visitantes todos os anos. Além de ser um ponto turístico importante, a Torre Eiffel se destaca por sua estrutura de ferro e pela iluminação especial durante a noite, tornando o local ainda mais bonito.<p>
+       <h2>3. Catedral de Notre-Dame</h2> 
+        <img src="assets/catedral.jpg" alt="catedral de notre dame">  
+        <p>A Catedral de Notre-Dame é um dos monumentos mais importantes de Paris e um grande símbolo da história da cidade. Localizada às margens do rio Sena, a catedral é famosa por sua arquitetura gótica, vitrais impressionantes e torres icônicas. Mesmo após os danos causados por um incêndio, o local continua sendo um dos pontos turísticos mais visitados e admirados da capital francesa.</p>
+
+    </body>
 </html>
