--- a/index.html
+++ b/index.html
@@ -7,21 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Conheça Paris</h1>
-    <img src="assets/paris.png" alt="vista de Paris" > 
-    <p>Paris é um dos destinos mais icônicos do mundo, reconhecida por sua arquitetura histórica, cultura vibrante e charme único.<br> 
-        Do alto, a cidade revela sua organização elegante e monumentos que tornam cada visita inesquecível. </p>
-    <h2>Descubra 3 lugares imperdíveis em Paris</h2>
-    <p></p>
-    <h2>1. Museu Do Louvre</h2>
-    <img src="assets/museu.jpg" alt="museu do louvre">
-    <p>O Museu do Louvre é um dos museus mais famosos do mundo e fica no centro de Paris. Ele funciona em um antigo palácio e reúne obras de arte de diferentes épocas, como pinturas, esculturas e objetos históricos. O museu é conhecido tanto pelo seu grande acervo quanto pela sua arquitetura, que mistura o prédio clássico com a moderna pirâmide de vidro, tornando a visita interessante e agradável.</p>
-    <h2>2. Torre Eiffel</h2>
-    <img src="assets/eiffel.jpg" alt="torre eiffel">
-    <p>A Torre Eiffel é o principal símbolo de Paris e um dos monumentos mais conhecidos do mundo. Construída em 1889, a torre oferece uma vista incrível da cidade e atrai milhões de visitantes todos os anos. Além de ser um ponto turístico importante, a Torre Eiffel se destaca por sua estrutura de ferro e pela iluminação especial durante a noite, tornando o local ainda mais bonito.<p>
-       <h2>3. Catedral de Notre-Dame</h2> 
-        <img src="assets/catedral.jpg" alt="catedral de notre dame">  
-        <p>A Catedral de Notre-Dame é um dos monumentos mais importantes de Paris e um grande símbolo da história da cidade. Localizada às margens do rio Sena, a catedral é famosa por sua arquitetura gótica, vitrais impressionantes e torres icônicas. Mesmo após os danos causados por um incêndio, o local continua sendo um dos pontos turísticos mais visitados e admirados da capital francesa.</p>
-
+    <div id="page">
+        <div class="card">
+            <main>  
+                <span class="tag">SUA PRÓXIMA VIAGEM</span>        
+                <h1>Conheça Paris:</h1>
+                <img src="assets/paris2.png" alt="vista de Paris" > 
+                <p>Paris é um dos destinos mais icônicos do mundo, famosa por sua história, arte e charme incomparável. Conhecida como a Cidade Luz, encanta com sua arquitetura elegante, museus renomados e ruas cheias de vida. Cortada pelo Rio Sena, a cidade combina tradição e modernidade, oferecendo experiências únicas e inesquecíveis a cada visita. </p>
+                    <h2>Descubra 3 lugares imperdíveis em Paris:</h2>
+                    <section id="Museu"></section>
+                    <h2>1. Museu Do Louvre</h2>
+                    <img src="assets/museu.jpg" alt="museu do louvre">
+                    <p>O Museu do Louvre é um dos museus mais famosos e visitados do mundo. Localizado no centro de Paris, ele abriga milhares de obras de arte de diferentes épocas e culturas, incluindo a famosa Mona Lisa. O local impressiona tanto pelo seu acervo quanto pela sua arquitetura histórica, sendo uma visita indispensável para quem deseja conhecer a arte e a história da França.</p>
+                    <section id="Torre"></section>
+                    <h2>2. Torre Eiffel</h2>
+                    <img src="assets/eiffel6.jpg" alt="rio sena">
+                    <p>A Torre Eiffel é o principal símbolo de Paris e um dos monumentos mais conhecidos do mundo. Construída em 1889, ela oferece uma vista incrível da cidade, permitindo observar Paris de diferentes ângulos. Além de sua importância histórica, a torre encanta visitantes pela beleza e pela experiência única de estar em um dos pontos mais famosos do planeta.</p>
+                        <section id="Catedral"></section>
+                        <h2>3. Catedral de Notre-Dame</h2> 
+                        <img src="assets/catedral.jpg" alt="catedral de notre dame">  
+                        <p>A Catedral de Notre-Dame é um dos maiores exemplos da arquitetura gótica francesa. Localizada às margens do Rio Sena, chama atenção por seus vitrais, esculturas e detalhes impressionantes. Além de sua beleza, a catedral possui grande importância histórica e cultural, sendo um dos locais mais visitados de Paris.</p>
+                    </div>
+                </main>
+                <footer class="footer">
+                    <p>Imagens retiradas de:
+                        <br>
+                        <a href="https://mus3ums.com/pt/france/paris-ile-de-france/louvre-paris-ile-de-francefrance/" target="_blank">Museu Do Louvre</a>
+                        <br>
+                        <a href="https://pt.wikipedia.org/wiki/Torre_Eiffel" target="_blank">Torre Eiffel</a>
+                        <br>
+                        <a href="https://pt.wikipedia.org/wiki/Notre-Dame_de_Paris" target="_blank">Catedral de Notre-Dame</a>
+                    </p>
+                </footer>
+            </div>
+                
     </body>
 </html>
